--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
             <td><input></td>
         </tr>
         <tr>
-            <td><label>Enter your Father Name :</label></td>
+            <td><label>Enter your Father's Name :</label></td>
             <td><input></td>
         </tr>
         <tr>
-            <td><label>Enter your Mother Name :</label></td>
+            <td><label>Enter your Mother's Name :</label></td>
             <td><input></td>
         </tr>
         <tr>
